Archive2/6f/9037d6478187a0/output
main.cpp:10:18: error: explicit template instantiation cannot have a definition; if this definition is meant to be an explicit specialization, add '<>' after the 'template' keyword
template void A::foo<int>(int t){ std::cout << "foo<int>()" << std::endl; };
~~~~~~~~         ^
        <>
1 error generated.
